# Wints-controlroom

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
config/: mediamtx.yml  mosquitto.conf  wints.yaml
control_room/: __init__.py  main.py
control_room/models/: __init__.py  system_model.py  target_state.py
control_room/mqtt/: __init__.py  client.py
control_room/services/: __init__.py  command_tracker.py
control_room/ui/: __init__.py  event_log.py  live_charts.py  main_window.py  metrics_panel.py  target_card.py  video_widget.py
docs/: 01_design.md  02_premortem.md  03_chosen_plan.md  04_real_hardware.md  05_demo_script.md  06_adr.md
firmware/: main_reference.c
scripts/: __init__.py  wints.py
target_simulator/: __init__.py  main.py  models.py  target.py
target_simulator/physics/: __init__.py  battery.py  motor.py  rf_link.py  solar.py
tests/: __init__.py  conftest.py
tests/chaos/: __init__.py  test_fault_injection.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_battery.py  test_models.py  test_motor.py  test_rf_link.py  test_solar.py
video_server/: __init__.py  generate_test_patterns.py  start_mediamtx.py
wints-web/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
wints-web/app/: globals.css  layout.tsx  page.tsx
wints-web/components/: BrokerConnect.tsx  ConnectionBar.tsx  EventLog.tsx  MetricsPanel.tsx  TargetCard.tsx
wints-web/lib/: mqttStore.ts  useStore.ts
