[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wints"
version = "1.0.0"
description = "Wireless Integrated Network Target System — Physics-accurate distributed embedded system simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "WINTS Engineering Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "PyQt6==6.7.0",
    "paho-mqtt==2.1.0",
    "pydantic==2.7.0",
    "structlog==24.1.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "prometheus-client==0.20.0",
    "click==8.1.7",
    "rich==13.7.1",
    "pyqtgraph==0.13.7",
    "opencv-python==4.9.0.80",
    "PyYAML==6.0.1",
    "aiohttp==3.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "hypothesis==6.100.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "pre-commit==3.7.0",
    "types-PyYAML==6.0.12.20240311",
]

[project.scripts]
wints = "scripts.wints:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF012", # mutable class variable — needed for Qt
    "N802",   # function name should be lowercase — Qt overrides require camelCase
    "RUF001", # ambiguous unicode in strings — physics notation (×, σ)
    "RUF002", # ambiguous unicode in docstrings — physics notation (×, σ)
    "RUF003", # ambiguous unicode in comments — physics notation (×, σ)
    "SIM102", # collapsible if — readability preference
    "SIM105", # use contextlib.suppress — readability preference
    "SIM108", # ternary operator — readability preference
    "RUF006", # asyncio.ensure_future result — intentional fire-and-forget
    "B007",   # loop control variable not used — _ prefix used where needed
    "F841",   # local variable assigned but never used — intermediate computation
]

[tool.ruff.lint.isort]
known-first-party = ["control_room", "target_simulator", "video_server"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "paho.*",
    "pyqtgraph.*",
    "cv2.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires broker)",
    "chaos: Chaos/fault injection tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
